// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render a different name, prompt, and beta tag if provided 1`] = `
<div>
  <EuiTitle>
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": "test index pattern",
          }
        }
      />
       
      <EuiBetaBadge
        label="Beta"
      />
    </h1>
  </EuiTitle>
  <EuiSpacer
    size="s"
  />
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="An index pattern can match a single index, for example, {single}, or {multiple} indices, {star}."
        id="kbn.management.createIndexPatternLabel"
        values={
          Object {
            "multiple": <strong>
              multiple
            </strong>,
            "single": <EuiCode>
              filebeat-4-3-22
            </EuiCode>,
            "star": <EuiCode>
              filebeat-*
            </EuiCode>,
          }
        }
      />
      <br />
      <EuiLink
        external={true}
        href="https://www.elastic.co/guide/en/kibana/mocked-test-branch/index-patterns.html"
        target="_blank"
      >
        <FormattedMessage
          defaultMessage="Read documentation"
          id="kbn.management.indexPatternPrompt.documentation"
          values={Object {}}
        />
      </EuiLink>
    </p>
  </EuiText>
  <EuiSpacer
    size="m"
  />
  <div>
    Test prompt
  </div>
</div>
`;

exports[`Header should render normally 1`] = `
<div>
  <EuiTitle>
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": "test index pattern",
          }
        }
      />
    </h1>
  </EuiTitle>
  <EuiSpacer
    size="s"
  />
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="An index pattern can match a single index, for example, {single}, or {multiple} indices, {star}."
        id="kbn.management.createIndexPatternLabel"
        values={
          Object {
            "multiple": <strong>
              multiple
            </strong>,
            "single": <EuiCode>
              filebeat-4-3-22
            </EuiCode>,
            "star": <EuiCode>
              filebeat-*
            </EuiCode>,
          }
        }
      />
      <br />
      <EuiLink
        external={true}
        href="https://www.elastic.co/guide/en/kibana/mocked-test-branch/index-patterns.html"
        target="_blank"
      >
        <FormattedMessage
          defaultMessage="Read documentation"
          id="kbn.management.indexPatternPrompt.documentation"
          values={Object {}}
        />
      </EuiLink>
    </p>
  </EuiText>
</div>
`;

exports[`Header should render without including system indices 1`] = `
<div>
  <EuiTitle>
    <h1>
      <FormattedMessage
        defaultMessage="Create {indexPatternName}"
        id="kbn.management.createIndexPatternHeader"
        values={
          Object {
            "indexPatternName": "test index pattern",
          }
        }
      />
    </h1>
  </EuiTitle>
  <EuiSpacer
    size="s"
  />
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="An index pattern can match a single index, for example, {single}, or {multiple} indices, {star}."
        id="kbn.management.createIndexPatternLabel"
        values={
          Object {
            "multiple": <strong>
              multiple
            </strong>,
            "single": <EuiCode>
              filebeat-4-3-22
            </EuiCode>,
            "star": <EuiCode>
              filebeat-*
            </EuiCode>,
          }
        }
      />
      <br />
      <EuiLink
        external={true}
        href="https://www.elastic.co/guide/en/kibana/mocked-test-branch/index-patterns.html"
        target="_blank"
      >
        <FormattedMessage
          defaultMessage="Read documentation"
          id="kbn.management.indexPatternPrompt.documentation"
          values={Object {}}
        />
      </EuiLink>
    </p>
  </EuiText>
</div>
`;
